--- a/index.html
+++ b/index.html
@@ -1,8 +1,60 @@
 <!DOCTYPE html>
 <html>
+  <head><title>Portfolio</title></head>
   <body>
-    <h1>Hello World</h1>
-    <h3>Peenor</h3>
-    <h3>e</h3>
+    <a href="./index.html">Home Page</a>
+    <a href="./leisure.html">Hobbies</a>
+    <a href="./academics.html">Academics</a>
+    <h3>Quick Links</h3>
+    <ul>
+      <li><a href="#intro">Introduction</a></li>
+      <li><a href="#hobbies">My Hobbies</a></li>
+      <li><a href="#academics">My Academics</a></li>
+    </ul>
+    <h1>Portfolio</h1>
+    <div id="intro">
+      <h2>Introduction</h2>
+      <h3>Welcome to my site!</h3>
+      <p>I plan to just showcase stuff about me here, and use the process of making it to learn 
+      Web Development.<br /><br /></p>
+    </div>
+    <div id="hobbies">
+      <h2>My Hobbies</h2>
+      <ul>
+        <li><strong>Speedcubing</strong></li>
+        <p>I have been a speedcuber since my 4th year of high school. 
+        I have been to competitions before and plan to go to many more! 
+        I do a variety of events and plan to be an All-Rounder.</p>
+        <li><strong>Music</strong></li>
+        <p>I have always been musically inclined. 
+        I started playing the guitar in my second year of high school, 
+        and have since also picked up the bass guitar. In addition to those, 
+        I can compose for many instruments as I have a general understanding of 
+        Western Music Theory.</p>
+        <li><strong>Video Games</strong></li>
+        <p>I have always been a shut-in, prefering to stay inside on my computer 
+        instead of going outside and being active. I play a variety of games, 
+        but mostly just cycle between a few titles rather than genres.</p>
+      </ul>
+    </div>
+    <div id="academics">
+      <h2>My Academics</h2>
+      <p>I'm still a student, so this section is just to showcase my journey so far 
+      as well as my Academic Aspirations. I hope to some day become a Penetration Tester.</p>
+      <ul>
+        <li><strong>College</strong></li>
+        <p>I'm currently a student at Northwest Vista College. I'm currently getting an Associate's 
+        Degree in Business Administration, and on course to graduate in 2027.</p>
+        <p>After I graduate, I plan to transfer to the University of Texas at San Antonio to get 
+        a Bachelor's Degree in Cyber Security.</p>
+        <li><strong>Certificates</strong></li>
+        <p>I don't currently hold any certifications, but I plan to get a range of IT Certificates, 
+        such as CompTIA's A+, Network+, and Security+ certificates, as well as my CEH Certificate 
+        and CCNA certificate.</p>
+        <li><strong>Current Credentials</strong></li>
+        <p>I attended high school at Corozal's Community College in my hometown of 
+        Corozal Town, Belize.</p>
+      </ul>
+    </div>
   </body>
 </html>
