--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
+<!--
+Author: Christopher Longsworth
+Created: Sept-30-2025
+Edited: Oct-04-2025
+-->
 <html>
   <head><title>Portfolio</title></head>
   <body>
     <a href="./index.html">Home Page</a>
     <a href="./leisure.html">Hobbies</a>
     <a href="./academics.html">Academics</a>
+    <a href="./media.html">Media</a>
     <h3>Quick Links</h3>
     <ul>
       <li><a href="#intro">Introduction</a></li>
       <li><a href="#hobbies">My Hobbies</a></li>
       <li><a href="#academics">My Academics</a></li>
+      <li><a href="#media">Media</a></li>
     </ul>
     <h1>Portfolio</h1>
     <div id="intro">
@@ -55,6 +62,10 @@
         <p>I attended high school at Corozal's Community College in my hometown of 
         Corozal Town, Belize.</p>
       </ul>
+    </div>
+    <div id="media">
+      <h2>Media</h2>
+      <p><strong>COMING SOON!</strong></p>
     </div>
   </body>
 </html>
