--- a/leisure.html
+++ b/leisure.html
@@ -1,17 +1,84 @@
 <!DOCTYPE html>
+<!--
+Author: Christopher Longsworth
+Created: Oct-02-2025
+Edited: Oct-04-2025
+-->
 <html>
   <head><title>Portfolio</title></head>
   <body>
     <a href="./index.html">Home Page</a>
     <a href="./leisure.html">Hobbies</a>
-    <a href="academics.html">Academics</a>
+    <a href="./academics.html">Academics</a>
+    <a href="./media.html">Media</a>
     <h3>Quick Links</h3>
     <ul>
-      <li>Something's going here, idk what though</li>
+      <li><a href="#cube">Speedcubing</a></li>
+      <li><a href="#music">Music</a></li>
+      <li><a href="#games">Video Games</a></li>
+      <li><a href="#media">Media</a></li>
     </ul>
     <h1>My Hobbies</h1>
-    <div>
-      <p>More coming soon!</p>
+    <p>This page is what I do in my free time! While it is titled "hobbies"</p>
+    <div id="cube">
+      <h2>Speedcubing</h2>
+      <p>I first learnt to solve a Rubik's Cube in my Senior Year of high school. I used online 
+      resources and a mix of my own intuition, and overtime I only got faster. Since then, I have 
+      learnt to solve a variety of other twisty puzzles and even attended the first ever official 
+      World Cube Association (WCA) competition in my home country of Belize.</p>
+      <p>I currently practice and participate in a number of events:</p>
+      <ul>
+        <li>2x2</li>
+        <li>3x3</li>
+        <li>3x3 One-Handed (OH)</li>
+        <li>4x4</li>
+        <li>5x5</li>
+        <li>6x6</li>
+        <li>7x7</li>
+        <li>Megaminx</li>
+      </ul>
+      <p>I have previously competed in speedsolving the Pyraminx, but haven't practiced in months. 
+      I plan to eventually learn and compete in the various Blindfolded (BLD) events hosted by the 
+      WCA, which are 3BLD, 4BLD, 5BLD, and Multi-BLD.</p>
+    </div>
+    <div id="music">
+      <h2>Music</h2>
+      <p>I have always been musically inclined. When I was 14, I finally got my first guitar and 
+      began learning. Since then, I have picked up the bass guitar as well, and my knowledge of 
+      music theory has allowed me to compose parts for instruments I don't have the physical 
+      technique for yet. I have performed a handfull of times; once as a guitarist for my high 
+      school's choir as a Senior, once spontaneously joining two performers at a dinner event I 
+      was at, and several times at private family events.</p>
+      <p>In addition to playing, I listen to and enjoy music from a variety of genres, such as:</p>
+      <ul>
+        <li>Rock</li>
+        <li>Metal</li>
+        <li>Hip-Hop</li>
+        <li>Soca</li>
+        <li>Reggae</li>
+        <li>K-pop</li>
+        <li>J-pop</li>
+        <li>J-rock</li>
+        <li>And many more!</li>
+      </ul>
+      <p>Regarding specific bands and artists, I find myself regularly listening to:</p>
+      <ul>
+        <li>Black Label Society</li>
+        <li>Metallica</li>
+        <li>Death</li>
+        <li>Ado</li>
+        <li>Fuuji Kaze</li>
+        <li>Kes</li>
+      </ul>
+    </div>
+    <div id="games">
+      <h2>Video Games</h2>
+      <p><strong>CONTINUE HERE</strong></p>
+      <p>Rhythm games, fps games, open world games.</p>
+    </div>
+    <div id="media">
+      <h2>Media</h2>
+      <p><strong>COMING SOON!</strong></p>
     </div>
   </body>
 </html>
