--- a/media.html
+++ b/media.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 Author: Christopher Longsworth
-Created: Oct-02-2025
+Created: Oct-04-2025
 Edited: Oct-04-2025
 -->
 <html>
@@ -15,7 +15,7 @@ Edited: Oct-04-2025
     <ul>
       <li>Something's going here, idk what though</li>
     </ul>
-    <h1>My Academics</h1>
+    <h1>Media</h1>
     <div>
       <p>More coming soon!</p>
     </div>
